# incolume.py.mailing

./: README.md  pyproject.toml
coverage_report/: cov.xml
coverage_report/html/: d_871b23b52d68d76f___init___py.html  index.html  status.json
incolume/py/mailing/: sendmail.py
incolume/py/mailing/datas/: mailing01.txt  mailing02.txt  mailing03.txt  mailing04.txt  mailing05.txt
incolume/py/mailing/scripts/: __init__.py
incolume/py/mailing/utils/: scrap_emails.py
incolume/py/utils/: scrap_emails.py
tests/: test_package.py  test_scripts.py  test_void.py
