[tool.poetry]
name = "incolume-py-mailing"
version = "0.1.0"
description = "Ferramenta para envio de mailing"
authors = ["Britodfbr <britodfbr@gmail.com>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "incolume"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
